<?xml version="1.0"?>
<package format="2">
  <name>eagleye_navigation</name>
  <version>0.0.0</version>
  <description>The navigation package</description>

  <maintainer email="osamu.sekino@tier4.jp">Osamu Sekino</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>rtklib_msgs</build_depend>
  <build_depend>eagleye_msgs</build_depend>
  <build_depend>eagleye_coordinate</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>rtklib_msgs</build_export_depend>
  <build_export_depend>eagleye_msgs</build_export_depend>
  <build_export_depend>eagleye_coordinate</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>rtklib_msgs</exec_depend>
  <exec_depend>eagleye_msgs</exec_depend>
  <exec_depend>eagleye_coordinate</exec_depend>
  <depend>yaml-cpp</depend>

  <export>
  </export>
</package>
