<?xml version="1.0"?>
<package format="2">
  <name>eagleye_pp</name>
  <version>0.0.0</version>
  <description>The eagleye_pp package</description>

  <maintainer email="osamu.sekino@tier4.jp">Osamu Sekino</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rosbag</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>rtklib_msgs</build_depend>
  <build_depend>eagleye_msgs</build_depend>
  <build_depend>eagleye_coordinate</build_depend>
  <build_depend>eagleye_navigation</build_depend>
  <build_depend>eagleye_gnss_converter</build_depend>
  <build_depend>multi_rosbag_controller</build_depend>
  <build_depend>yaml-cpp</build_depend>
  <build_depend>kml_generator</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rosbag</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>rtklib_msgs</build_export_depend>
  <build_export_depend>eagleye_msgs</build_export_depend>
  <build_export_depend>eagleye_coordinate</build_export_depend>
  <build_export_depend>eagleye_navigation</build_export_depend>
  <build_export_depend>eagleye_gnss_converter</build_export_depend>
  <build_export_depend>multi_rosbag_controller</build_export_depend>
  <build_export_depend>yaml-cpp</build_export_depend>
  <build_export_depend>kml_generator</build_export_depend>
  <build_export_depend>tf2</build_export_depend>
  <build_export_depend>tf2_geometry_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rosbag</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>rtklib_msgs</exec_depend>
  <exec_depend>eagleye_msgs</exec_depend>
  <exec_depend>eagleye_coordinate</exec_depend>
  <exec_depend>eagleye_navigation</exec_depend>
  <exec_depend>eagleye_gnss_converter</exec_depend>
  <exec_depend>multi_rosbag_controller</exec_depend>
  <exec_depend>yaml-cpp</exec_depend>
  <exec_depend>kml_generator</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>

  <export>
  </export>
</package>
