<?xml version="1.0"?>
<package format="3">
  <name>fix2pose</name>
  <version>1.0.0</version>
  <description>fix2pose package</description>

  <maintainer email="osamu.sekino@tier4.jp">OsamuSekino</maintainer>

  <license>BSD3</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geographic_msgs</build_depend>
  <build_depend>eagleye_msgs</build_depend>
  <build_depend>navigation</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>coordinate</build_depend>
  <build_export_depend>rclcpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>geographic_msgs</build_export_depend>
  <build_export_depend>eagleye_msgs</build_export_depend>
  <build_export_depend>navigation</build_export_depend>
  <build_export_depend>tf2_ros</build_export_depend>
  <build_export_depend>coordinate</build_export_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geographic_msgs</exec_depend>
  <exec_depend>eagleye_msgs</exec_depend>
  <exec_depend>navigation</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>coordinate</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>tf2_geometry_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
