<?xml version="1.0"?>
<package format="3">
  <name>eagleye_geo_pose_converter</name>
  <version>1.0.0</version>
  <description>geo_pose_converter package</description>

  <maintainer email="osamu.sekino@tier4.jp">OsamuSekino</maintainer>
  <author email="koji.minoda@tier4.jp">Koji Minoda</author>

  <license>BSD3</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>eagleye_msgs</build_depend>
  <build_depend>eagleye_navigation</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>eagleye_coordinate</build_depend>
  <build_depend>geographic_msgs</build_depend>
  <build_export_depend>rclcpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>eagleye_msgs</build_export_depend>
  <build_export_depend>eagleye_navigation</build_export_depend>
  <build_export_depend>tf2_ros</build_export_depend>
  <build_export_depend>eagleye_coordinate</build_export_depend>
  <build_export_depend>geographic_msgs</build_export_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>eagleye_msgs</exec_depend>
  <exec_depend>eagleye_navigation</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>eagleye_coordinate</exec_depend>
  <exec_depend>geographic_msgs</exec_depend>
  <depend>llh_converter</depend>
  <depend>std_srvs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>tf2_geometry_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
