<?xml version="1.0"?>
<package format="2">
  <name>eagleye_tf</name>
  <version>0.0.0</version>
  <description>The eagleye_tf package</description>

  <maintainer email="osamu.sekino@tier4.jp">Osamu Sekino</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <export></export>
  
</package>
